Fix and align search bar jumbotron center

--- a/mobile/mobile.css
+++ b/mobile/mobile.css
@@ -2,7 +2,7 @@
     width: 200px;
     height: 50px;
     background: #000;
-    margin: 0 auto;
+    margin: 30px auto;
 }
 
 #query {
@@ -16,15 +16,6 @@
     /*margin: 0 auto;*/
 }
 
-.icon {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size:24px;
-    color: #4f5b66;
-    padding: 0;
-    border: none;
-    background: none;
-    cursor: pointer;
-    outline:none;
+.border {
+    border: 1px solid pink;
 }
